Refactor search api