@@ -14,37 +14,28 @@ public final class UserSpecificationsBuilder {
         params = new ArrayList<>();
     }
 
-    // API
-
-    public UserSpecificationsBuilder with(final String key, final String operation, final Object value, final String prefix, final String suffix) {
-        return with(null, key, operation, value, prefix, suffix);
-    }
-
-    public UserSpecificationsBuilder with(final String orPredicate, final String key, final String operation, final Object value, final String prefix, final String suffix) {
+    public void with(final String orPredicate, final String key, final String operation, final Object value, final String prefix, final String suffix) {
         SearchOperation op = SearchOperation.getSimpleOperation(operation.charAt(0));
-        if (op != null) {
-            if (op == SearchOperation.EQUALITY) { // the operation may be complex operation
-                final boolean startWithAsterisk = prefix != null && prefix.contains(SearchOperation.ZERO_OR_MORE_REGEX);
-                final boolean endWithAsterisk = suffix != null && suffix.contains(SearchOperation.ZERO_OR_MORE_REGEX);
+        if (SearchOperation.EQUALITY == op) { // the operation may be complex operation
+            final boolean startWithAsterisk = prefix != null && prefix.contains(SearchOperation.ZERO_OR_MORE_REGEX);
+            final boolean endWithAsterisk = suffix != null && suffix.contains(SearchOperation.ZERO_OR_MORE_REGEX);
 
-                if (startWithAsterisk && endWithAsterisk) {
-                    op = SearchOperation.CONTAINS;
-                } else if (startWithAsterisk) {
-                    op = SearchOperation.ENDS_WITH;
-                } else if (endWithAsterisk) {
-                    op = SearchOperation.STARTS_WITH;
-                }
+            if (startWithAsterisk && endWithAsterisk) {
+                op = SearchOperation.CONTAINS;
+            } else if (startWithAsterisk) {
+                op = SearchOperation.ENDS_WITH;
+            } else if (endWithAsterisk) {
+                op = SearchOperation.STARTS_WITH;
             }
-            params.add(new SpecSearchCriteria(orPredicate, key, op, value));
         }
-        return this;
+        params.add(new SpecSearchCriteria(orPredicate, key, op, value));
     }
 
     public Specification<User> build() {
         if (params.isEmpty())
             return null;
 
-        Specification<User> result = new UserSpecification(params.get(0));
+        Specification<User> result = new UserSpecification(params.getFirst());
 
         for (int i = 1; i < params.size(); i++) {
             result = params.get(i).isOrPredicate()
@@ -55,13 +46,4 @@ public final class UserSpecificationsBuilder {
         return result;
     }
 
-    public final UserSpecificationsBuilder with(UserSpecification spec) {
-        params.add(spec.criteria());
-        return this;
-    }
-
-    public final UserSpecificationsBuilder with(SpecSearchCriteria criteria) {
-        params.add(criteria);
-        return this;
-    }
 }
